# Remake-of-Tempest-Atari-1981

./: .gitignore  CMakeLists.txt  Game.cpp  Game.hpp  Makefile  Map.hpp  Map_Hall.hpp  Player.hpp  Point.hpp  README.md  Rapport.md  fourrier.ipynb  main.cpp  makefile  tp_sdl.cpp
Audio/txt/: gameover.txt  player_touche.txt  score.txt  superzapper.txt  test.txt
Rapport/: Rapport.md  Rapport_SF.md  Rapport_SJ.md
Tempest/: CMakeLists.txt  main.cpp
Tempest-exe/: CMakeLists.txt  main.cpp
Tempest-lib/: CMakeLists.txt
Tempest-lib/include/: Audio.hpp  Character.hpp  Collision.hpp  Formes.hpp  FuseballTankers.hpp  Game.hpp  GameOver.hpp  Line.hpp  Menu.hpp  Missile.hpp  Player.hpp  PulsarTankers.hpp  Pulsars.hpp  SDLWrapper.hpp  Spikers.hpp  SquareMap.hpp  Tankers.hpp  TextRenderer.hpp  TriangleMap.hpp  Tube.hpp  Tunel.hpp  Utils.hpp
Tempest-lib/src/: Audio.cpp  Color.cpp  Enemy.cpp  Flippers.cpp  FuseballTankers.cpp  Fuseballs.cpp  Game.cpp  GameOver.cpp  Level.cpp  Line.cpp  Menu.cpp  Missile.cpp  Pause.cpp  Player.cpp  PulsarTankers.cpp  Pulsars.cpp  SDLWrapper.cpp  Spikers.cpp  Tankers.cpp  TextRenderer.cpp  TriangleMap.cpp  Tube.cpp  Tunel.cpp
Tempest/include/: Audio.hpp  Character.hpp  CircleMap.hpp  Color.hpp  Enemy.hpp  Flippers.hpp  FuseballTankers.hpp  Fuseballs.hpp  Game.hpp  Level.hpp  Menu.hpp  Missile.hpp  Pause.hpp  Player.hpp  PulsarTankers.hpp  Pulsars.hpp  SDLWrapper.hpp  Spikers.hpp  Tankers.hpp  TextRenderer.hpp  Timer.hpp  TriangleMap.hpp  Tube.hpp  Tunel.hpp  Utils.hpp
Tempest/src/: Audio.cpp  CircleMap.cpp  Collision.cpp  Color.cpp  Enemy.cpp  Flippers.cpp  FuseballTankers.cpp  Fuseballs.cpp  Game.cpp  GameOver.cpp  Level.cpp  Line.cpp  Menu.cpp  Missile.cpp  Pause.cpp  Player.cpp  Point.cpp  PulsarTankers.cpp  Pulsars.cpp  SDLWrapper.cpp  Spikers.cpp  SquareMap.cpp  Tankers.cpp  TextRenderer.cpp  Timer.cpp  TriangleMap.cpp  Tube.cpp  Tunel.cpp
Tempest/src/Tempest/: Character.hpp  Enemy.cpp  Flippers.cpp  Game.cpp  Game.hpp  Line.hpp  Missile.cpp  Player.cpp  Point.hpp  PulsarTankers.hpp  Pulsars.hpp  Spikers.hpp  Tankers.cpp  Tankers.hpp  TextRenderer.cpp  Utils.hpp
headers/: Character.hpp  CircleMap.hpp  Collision.hpp  Color.hpp  Enemy.hpp  Flippers.hpp  Formes.hpp  FuseballTankers.hpp  Fuseballs.hpp  Game.hpp  Hall.hpp  Level.hpp  Line.hpp  Map.hpp  Missile.hpp  Player.hpp  Point.hpp  PulsarTankers.hpp  Pulsars.hpp  SDLWrapper.hpp  Shape.hpp  Spikers.hpp  SquareMap.hpp  Tankers.hpp  TextRenderer.hpp  Timer.hpp  Triangle.hpp  TriangleMap.hpp  Tube.hpp  Tunel.hpp  Utils.hpp  missile.hpp  score.hpp  text_renderer.hpp  utils.hpp
src/: CircleMap.cpp  Collision.cpp  Color.cpp  Enemy.cpp  Flippers.cpp  FuseballTankers.cpp  Fuseballs.cpp  Game.cpp  Level.cpp  Line.cpp  Menu.cpp  Missile.cpp  Player.cpp  Point.cpp  PulsarTankers.cpp  Pulsars.cpp  SDLWrapper.cpp  Spikers.cpp  SquareMap.cpp  Tankers.cpp  TextRenderer.cpp  Timer.cpp  Triangle.cpp  TriangleMap.cpp  Tube.cpp  Tunel.cpp  main.cpp
